cluster/apps/media/dizquetv/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dizquetv
  namespace: media
spec:
  selector:
    app: dizquetv
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
