cluster/apps/media/dizquetv/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dizquetv-http
  namespace: download
spec:
  hostnames:
    - dizquetv.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: dizquetv
          port: 80
